# ovrly

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  default.nix  derivation.nix  flake.nix  gen_vs2019.bat  hacking.md  readme.md
.ci/: build.ps1  depsetup.ps1
.circleci/: build.ps1  config.yml
cmake/: cef_macros.cmake  cef_variables.cmake
resource/: index.html  scene.js
src/: CMakeLists.txt  app.aps  app.manifest  app.rc  appovrly.cc  appovrly.h  d3d.cc  d3d.h  events.h  gfx.h  gfx_d3d.cc  gfx_d3d.h  gfx_ogl.cc  gfx_ogl.h  gl.hpp  imgovrly.cc  imgovrly.h  jsovrly.cc  jsovrly.h  logging.cc  logging.h  main.cc  mgrovrly.cc  mgrovrly.h  ovrly.h  ovrly_app.cc  ovrly_app.h  ovrly_handler.cc  ovrly_handler.h  ovrly_handler_win.cc  platform.h  ranges.hpp  resource.h  serralize.hpp  uiovrly.cc  uiovrly.h  uiovrly_linux.cc  uiovrly_win.cc  vrovrly.cc  vrovrly.h  (+2 more)
